unpackaged/main/default/objects/Contact/fields/subscribed_customer_success_emails__c.field-meta.xml
<CustomField>
    <fullName>subscribed_customer_success_emails__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Subscribed: Customer Success Emails</label>
    <type>Checkbox</type>
</CustomField>