unpackaged/main/default/objects/Contact/fields/Subscribed_event_emails__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_event_emails__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Subscribed: Event Emails</label>
    <type>Checkbox</type>
</CustomField>