unpackaged/main/default/objects/Contact/fields/Subscribed_nl_commercial_emails__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_nl_commercial_emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscribed: Newsletter &amp;Commercial Email</label>
    <type>Checkbox</type>
</CustomField>