unpackaged/main/default/objects/Contact/fields/Subscribed_product_help_emails__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_product_help_emails__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Subscribed: Product Help Onboarding Mail</label>
    <type>Checkbox</type>
</CustomField>