unpackaged/main/default/objects/Contact/fields/subscribed_to_b2b_newsletter__c.field-meta.xml
<CustomField>
    <fullName>subscribed_to_b2b_newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DOI Requested</label>
    <type>Checkbox</type>
</CustomField>