unpackaged/main/default/objects/Contact/fields/subscribed_to_b2b_newsletter_at__c.field-meta.xml
<CustomField>
    <fullName>subscribed_to_b2b_newsletter_at__c</fullName>
    <label>DOI Requested Date</label>
    <type>DateTime</type>
</CustomField>