unpackaged/main/default/objects/Contact/fields/TestScore__c.field-meta.xml
<CustomField>
    <fullName>TestScore__c</fullName>
    <label>TestScore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>