unpackaged/main/default/objects/Contact/fields/TopicScore_Abmahnung__c.field-meta.xml
<CustomField>
    <fullName>TopicScore_Abmahnung__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TopicScore Abmahnung</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>