unpackaged/main/default/objects/Contact/fields/TopicScore_DataPrivacy__c.field-meta.xml
<CustomField>
    <fullName>TopicScore_DataPrivacy__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TopicScore DataPrivacy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>