unpackaged/main/default/objects/Contact/fields/TopicScore_Return__c.field-meta.xml
<CustomField>
    <fullName>TopicScore_Return__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TopicScore Return</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>