unpackaged/main/default/objects/Contact/fields/TopicScore_SEO__c.field-meta.xml
<CustomField>
    <fullName>TopicScore_SEO__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TopicScore SEO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>