unpackaged/main/default/objects/Contact/fields/Traffic_Package_Journey__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Package_Journey__c</fullName>
    <label>Traffic Package Journey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Journey</valueSetName>
    </valueSet>
</CustomField>