unpackaged/main/default/objects/Contact/fields/Trustmark_Journey__c.field-meta.xml
<CustomField>
    <fullName>Trustmark_Journey__c</fullName>
    <label>Trustmark Journey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Journey</valueSetName>
    </valueSet>
</CustomField>