unpackaged/main/default/objects/Contact/fields/upgrade_token__c.field-meta.xml
<CustomField>
    <fullName>upgrade_token__c</fullName>
    <label>Upgrade Token</label>
    <length>128</length>
    <type>Text</type>
</CustomField>