unpackaged/main/default/objects/Contact/fields/Yearly_Price_for_HBS__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Price_for_HBS__c</fullName>
    <formula>Account.YearlyPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yearly Price for HBS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>