unpackaged/main/default/objects/Contact/fields/Zuora_BillToId__c.field-meta.xml
<CustomField>
    <fullName>Zuora_BillToId__c</fullName>
    <description>Zuora Bill To Contact Id</description>
    <label>Zuora BillToId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>