unpackaged/main/default/objects/Contact/fields/Zuora_SoldToId__c.field-meta.xml
<CustomField>
    <fullName>Zuora_SoldToId__c</fullName>
    <description>Zuora SoldToId</description>
    <label>Zuora SoldToId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>