unpackaged/main/default/objects/Contact/fields/zz_email__c.field-meta.xml
<CustomField>
    <fullName>zz_email__c</fullName>
    <formula>Account.Name  +  &quot; - &quot; +  Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zz Email</label>
    <type>Text</type>
</CustomField>