unpackaged/main/default/objects/Contact/recordTypes/Obsolete.recordType-meta.xml
<RecordType>
    <fullName>Obsolete</fullName>
    <active>true</active>
    <description>used for all inactive or invalid contacts</description>
    <label>Obsolete</label>
</RecordType>