unpackaged/main/default/objects/Contact/recordTypes/Partner_Contact.recordType-meta.xml
<RecordType>
    <fullName>Partner_Contact</fullName>
    <active>true</active>
    <label>Partner Contact</label>
</RecordType>