unpackaged/main/default/objects/Contact/recordTypes/Prospect_Contact.recordType-meta.xml
<RecordType>
    <fullName>Prospect_Contact</fullName>
    <active>true</active>
    <label>Prospect Contact</label>
</RecordType>