unpackaged/main/default/objects/Contact/recordTypes/Trial_Contact.recordType-meta.xml
<RecordType>
    <fullName>Trial_Contact</fullName>
    <active>true</active>
    <label>Trial Contact</label>
</RecordType>