unpackaged/main/default/objects/Contact/validationRules/Customer_Contacts_cannot_be_deleted.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Contacts_cannot_be_deleted</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
NOT($User.ignore_validation_rules__c), 
ISNULL(Id ) , 
$Profile.Name != &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>Contacts of Record Type Customer Contact cannot be deleted.</errorMessage>
</ValidationRule>