unpackaged/main/default/objects/Contact/validationRules/Email_phone_must_be_filled_upon_creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_phone_must_be_filled_upon_creation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
ISBLANK(Email),
ISBLANK(Phone),
ISBLANK(MobilePhone)
)</errorConditionFormula>
    <errorMessage>Please enter an email address or (mobile) phone number.</errorMessage>
</ValidationRule>