unpackaged/main/default/objects/Contact/validationRules/Phone_format_incorrect.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_format_incorrect</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNEW()
||
ISCHANGED(Phone)
||
ISCHANGED(MobilePhone)
||
ISCHANGED(OtherPhone))
&amp;&amp;
(
(NOT(ISBLANK(Phone))
&amp;&amp;
NOT(REGEX(Phone,&quot;^[+]{1}[0-9]{1,3}[ ]{0,1}[0-9]{7,15}&quot;)))
||
(NOT(ISBLANK(MobilePhone))
&amp;&amp;
NOT(REGEX(MobilePhone,&quot;^[+]{1}[0-9]{1,3}[ ]{0,1}[0-9]{7,15}&quot;)))
||
(NOT(ISBLANK(OtherPhone))
&amp;&amp;
NOT(REGEX(OtherPhone,&quot;^[+]{1}[0-9]{1,3}[ ]{0,1}[0-9]{7,15}&quot;)))
)
&amp;&amp; 
 $User.is_API_User__c = false
&amp;&amp;
 $User.ignore_validation_rules__c = false
&amp;&amp;
!ISPICKVAL($User.UserType,&quot;Guest&quot;)
&amp;&amp;
($UserRole.DeveloperName != &quot;Teamlead_Outbound_Lead_Management&quot;
&amp;&amp;
$UserRole.DeveloperName != &quot;Team_Lead_Management_Outbound&quot;)</errorConditionFormula>
    <errorMessage>Bad Phone format on contact, please make sure Phone, MobilePhone and OtherPhone start with a country code followed by 7-15 digits (numbers only) e.g.: +49 123456789</errorMessage>
</ValidationRule>