unpackaged/main/default/objects/Contact/validationRules/Prevent_changing_Contact_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_changing_Contact_Name</fullName>
    <active>false</active>
    <errorConditionFormula>RecordTypeId = &#39;0120Y000000R2Nx&#39; &amp;&amp; ISCHANGED( LastName ) &amp;&amp; $User.ignore_validation_rules__c = FALSE</errorConditionFormula>
    <errorMessage>You cannot change the Last Name of a Contact.</errorMessage>
</ValidationRule>