unpackaged/main/default/objects/Contact/validationRules/Sales_cannot_create_Contact_on_other_acc.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_cannot_create_Contact_on_other_acc</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($User.ignore_validation_rules__c),
ISNEW() || ISCHANGED(LastModifiedDate),
$Profile.Name = &quot;Sales Representative&quot; || $Profile.Name = &quot;Teamlead Inside Sales&quot;,
$User.Id &lt;&gt; Account.OwnerId
)</errorConditionFormula>
    <errorMessage>You cannot create or edit Contacts on Accounts you don&#39;t own.</errorMessage>
</ValidationRule>