unpackaged/main/default/objects/Contact/listViews/Community_Partners_DACH.listView-meta.xml
<ListView>
    <fullName>Community_Partners_DACH</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ParterCampaign__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsCommunityPartner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ParterCampaign__c</field>
        <operation>contains</operation>
        <value>Sales Partner DE,Sales Partner CH,Sales Partner AT</value>
    </filters>
    <filters>
        <field>primary_contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Community Partners DACH</label>
</ListView>