unpackaged/main/default/objects/Contact/listViews/Enterprise_Ralf_Contacts.listView-meta.xml
<ListView>
    <fullName>Enterprise_Ralf_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>contains</operation>
        <value>Brungs</value>
    </filters>
    <label>Enterprise_Ralf_Contacts</label>
</ListView>