unpackaged/main/default/objects/Contact/listViews/Playbooks_Accounts_for_Outreach.listView-meta.xml
<ListView>
    <fullName>Playbooks_Accounts_for_Outreach</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Playbooks Accounts for Outreach</label>
</ListView>