unpackaged/main/default/objects/Contact/listViews/Salesloft.listView-meta.xml
<ListView>
    <fullName>Salesloft</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Salesloft</label>
</ListView>