unpackaged/main/default/objects/Contact/listViews/Salesloft_Delphine_KA.listView-meta.xml
<ListView>
    <fullName>Salesloft_Delphine_KA</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.LAST_UPDATE</field>
        <operation>equals</operation>
        <value>8/29/2018 12:00 AM</value>
    </filters>
    <label>Salesloft Delphine KA</label>
</ListView>